# Engineer

./: AUTHORS  CMakeLists.txt  COPYING  FindBerkeleyDB.cmake  FindEdi.cmake  Makefile.am  NEWS  README  TODO  configure.ac  engineer_game.eo.c  engineer_game.eo.h
Engineer_Render_Test/: __db.001  __db.002
archscripts/: README.md
archscripts2/: e_arch_bootstrap.sh  e_build.sh
data/desktop/: Makefile.am  engineer.desktop  engineer.desktop.in
doc/: Makefile.am  engineer.1  engineer.1.in
packaging/pkgbuild/: PKGBUILD
packaging/slackware/: Makefile.am  engineer.SlackBuild  slack-desc
po/: POTFILES.in
src/: CMakeLists.txt  FindBerkeleyDB.cmake  codebucket.txt
src/headers/: Engineer.h  Engineer_Module.h
src/lib/: CMakeLists.txt  Engineer.h  Makefile.am  engineer.c  engineer_console.c  engineer_console.eo  engineer_console.h  engineer_game.c  engineer_game.eo  engineer_game.eo.c  engineer_game.eo.h  engineer_game.h  engineer_math.c  engineer_math.h  engineer_module.c  engineer_module.eo  engineer_module.eo.c  engineer_module.eo.h  engineer_module.h  engineer_node.c  engineer_node.eo  engineer_node.eo.c  engineer_node.eo.h  engineer_node.h  engineer_scene.c  engineer_scene.eo  engineer_scene.eo.c  engineer_scene.eo.h  engineer_scene.h  engineer_type.c  engineer_type.h  engineer_viewport.c  engineer_viewport.eo  engineer_viewport.eo.c  engineer_viewport.h  notes.txt  scratchpad.txt
src/lib/backburner/: engineer_node.c  engineer_node.eo
src/lib/global/: const.h  index.h  struct.h
src/lib/global/hash/: murmur3.c  murmur3.h
src/lib/global/math/: angl.c  angl.h  cordic.c  cordic.h  eulr.c  eulr.h  mtrx.c  mtrx.h  quat.c  quat.h  sclr.c  sclr.h  vec2.c  vec2.h  vec3.c  vec3.h
src/lib/global/tree/: octspace.h
src/lib/global/type/: angl.c  angl.h  eulr.c  eulr.h  mtrx.c  mtrx.h  quat.c  quat.h  sclr.c  sclr.h  type.c  type.h  vec2.c  vec2.h  vec3.c  vec3.h
src/lib/mixins/: engineer_database.c  engineer_database.eo
src/lib/modules/: CMakeLists.txt  engineer_module.c  engineer_module.eo  engineer_module.eo.c  engineer_module.eo.h  engineer_module.h  engineer_template.c  engineer_template.eo  engineer_transform.c  engineer_transform.eo  engineer_transform.eo.c  engineer_transform.eo.h  engineer_transform.h
src/lib/modules/transform/: CMakeLists.txt  engineer_transform.c  engineer_transform.eo  engineer_transform.h
src/lib/services/: engineer_director.c  engineer_director.eo
src/lib/shaders/: test.frag  test.vert
src/lib/templates/: engineer_module_template.eo.c  engineer_module_template.eo.h  engineer_module_template.h
src/modules/: CMakeLists.txt  Camera.c  Camera.h  Collider.c  Collider.h  Engineer_Transform.c  Engineer_Transform.h  FPSControl.c  FPSControl.h  FPS_Control.c  FPS_Control.h  Mass.c  Mass.h  Transform.c  Transform.h  engineer_transform.c  engineer_transform.h
src/tests/: Makefile.am  test_engineer.c
src/workbench/: elm_test.frag  scratchpad.txt
src/workbench/tree/: octmass.h  octspace.c  octspace.h
